# short-sale-reporting

./: .dockerignore  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  nginx.conf
evidence-app/: evidence.config.yaml  package-lock.json  package.json
evidence-app/pages/: index.md
evidence-app/pages/exceptions/: index.md
evidence-app/pages/ledger/: index.md
evidence-app/sources/short_sales/: connection.yaml  intraday_ledger.sql  ledger_oct26.sql  ledger_oct27.sql  ledger_oct28.sql  ledger_oct29.sql  ledger_oct30.sql
pipeline/: pyproject.toml
pipeline/src/short_sales_pipeline/: cli.py  convert.py  upload.py
scripts/: fetch-data.sh
