[project]
name = "short-sales-pipeline"
version = "0.1.0"
description = "CSV/Excel → Parquet pipeline for the Short Sales Dashboard"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "openpyxl>=3.1.5",
    "boto3>=1.35.0",
    "pyarrow>=17.0.0",
    "click>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/short_sales_pipeline"]
